# zm-soap-harness

./: .gitignore  1  README.md  build.xml  ivy.xml
.circleci/: config.yml  global.properties
.github/: CODEOWNERS
conf/: ListOfTestCases.txt  ListOfTestCases_zimbraX.txt  global.properties  global.properties.in  global.properties.zimbrax  log4j-dev.properties  log4j.properties  log4jSTAF.properties  setup.sh  skipped-tests-zimbrax.txt  skipped-tests.txt
conf/ZimbraExtensions/CustomAuthQA/: MANIFEST.MF
conf/ZimbraExtensions/ScalityHttpStore/: MANIFEST.MF
data/TestMailRaw/: Yahoo-Ab.csv  contacts.csv
data/TestMailRaw/11331/: msg1.txt
data/TestMailRaw/14942/: mime1.txt  mime2.txt
data/TestMailRaw/27463/: read_receipt.txt
data/TestMailRaw/28623/: msg2.txt  msg3.txt
data/TestMailRaw/32222/: Email-Out.csv
data/TestMailRaw/36044/: msg1.txt
data/TestMailRaw/36460/: msg1.txt
data/TestMailRaw/37018/: Lmtp-Basic01.txt
data/TestMailRaw/49531/: bug49531.txt
data/TestMailRaw/64903/: msg1.txt
data/TestMailRaw/8055/: msg01.txt
data/TestMailRaw/DevUnitTestData/: 109  131  14  143  146  155  16  160  169  17  19  (+40 more)
data/testmailraw/: contacts.csv  mappoint.ptm
src/haskell/: build.xml  updateTestTools.hs  waitjob.hs
src/haskell/toolkit/: INSTALL  LICENSE  README  Setup.hs  app.cabal
src/haskell/toolkit/src/: build.xml  zlog.hs  zmcontrol.hs  zmprov.hs  zversion.hs
src/haskell/toolkit/src/Zimbra/: Command.hs  Server.hs
src/haskell/toolkit/testsuite/: test-toolkit.hs
src/ruby/: getbug.rb
utils/: monitor_soap.sh  run_and_monitor_soap.sh  soap-run.sh
(+6144 files in other folders)
